# bate-papo-regis

./: .gitignore  README.md
dia_001/: pyproject.toml
dia_001/app/: __init__.py
dia_001/tests/: test_app.py
dia_001_rg/app/: __init__.py
dia_001_rg/tests/: test_app.py
dia_002/app/: database.py
dia_002/tests/: test_app.py
dia_002_rg/: README.md  pyproject.toml
dia_002_rg/app/: __init__.py  database.py
dia_002_rg/tests/: test_app.py
dia_003/: README.md  db.db  pyproject.toml
dia_003/app/: database.py
dia_003/tests/: test_app.py
dia_004/: config.py  pyproject.toml
dia_004/app/: __init__.py  config.py  database.py
dia_004/tests/: test_app.py
dia_005/: README.md  config.py  pyproject.toml
dia_005/app/: __init__.py  config.py  database.py
dia_005/app/templates/: index.html
dia_005/migrations/: env.py
dia_005/migrations/versions/: 6a6f826fe5b8_inicial.py  c67c828932e8_segunda_migração.py
