[tool.poetry]
name = "regis"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.18"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
alembic = "^1.6.5"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
